syntax = "proto3";

package com.github.dcysteine.nesql.exporter.proto;

option java_multiple_files = true;

message FluidGroupPb {
  repeated FluidPb fluid = 1;
}

message FluidPb {
  int32 fluid_id = 1;
  int32 amount = 2;
  string nbt = 3;
}