syntax = "proto3";

package com.github.dcysteine.nesql.exporter.proto;

option java_multiple_files = true;

message ItemGroupPb {
  repeated ItemStackPb item_stack = 1;
}

message ItemStackPb {
  string mod_id = 1;
  string internal_name = 2;
  int32 damage = 3;
  int32 stack_size = 4;
  string nbt = 5;
}

message ItemStackWithProbabilityPb {
  string mod_id = 1;
  string internal_name = 2;
  int32 damage = 3;
  int32 stack_size = 4;
  string nbt = 5;
  double probability = 6;
}