syntax = "proto3";

package com.github.dcysteine.nesql.exporter.proto;

option java_multiple_files = true;

message ItemGroupPb {
  repeated ItemPb item = 1;
  repeated int32 wildcard_item_id = 2;
}

message ItemPb {
  int32 item_id = 1;
  int32 damage = 2;
  int32 stack_size = 3;
  string nbt = 4;
}